# fastapi_playtime

./: database.db  doc.md  package-lock.json  package.json  pyproject.toml
fastapi_playtime/: app.py  database.py  security.py  settings.py
fastapi_playtime/models/: agendamento.py  quadra.py  user.py
fastapi_playtime/routers/: agendamento.py  agendamentos_nomeados.py  auth.py  current_user.py  horarios_disponiveis.py  quadra.py  test.py  users.py
fastapi_playtime/schemas/: agendamento.py  horarios_disponiveis.py  quadra.py  user.py
fastapi_playtime/utils/: datetime_format.py  test.py
play_time/: package-lock.json  package.json
play_time/app/: react-slick.d.ts
play_time/app/adm/: page.tsx
play_time/app/admCriarUser/: page.tsx
play_time/app/admGerenciaQuadras/: page.tsx
play_time/app/agenda/: page.tsx
play_time/app/cadastro/: page.tsx
play_time/app/esqueciSenha/: page.tsx
play_time/app/home/: page.tsx
play_time/app/login/: page.tsx
play_time/app/menu/: page.tsx
play_time/app/meusAgendamentos/: page.tsx
play_time/components/ui/: calendar.tsx
play_time/public/: availableTimes.json  courts.json
